crates/uitest/fixtures/ty/def/constraint_kind_constructor.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/constraint_kind_constructor.fe
---
error[8-0030]: value is expected
   ┌─ constraint_kind_constructor.fe:16:7
   │
16 │ where P<T>
   │       ^^^^ `type` cannot be used as a value
